unpackaged/main/default/objects/Fundraising_Contact__c/Fundraising_Contact__c.object-meta.xml
<CustomObject>
    <label>Fundraising Contact</label>
    <nameField>
        <displayFormat>FC - {0}</displayFormat>
        <label>Fundraising Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fundraising Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>