unpackaged/main/default/objects/Fundraising_Contact__c/fields/Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Fundraising__c</fullName>
    <label>Fundraising</label>
    <referenceTo>Fundraising__c</referenceTo>
    <relationshipLabel>Fundraising Contacts</relationshipLabel>
    <relationshipName>Fundraising_Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>