unpackaged/main/default/objects/Fundraising_Contact__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fundraising Contacts</relationshipLabel>
    <relationshipName>Fundraising_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>