unpackaged/main/default/objects/Fundraising_Contact__c/fields/Last_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Sent__c</fullName>
    <label>Last Email Sent</label>
    <type>DateTime</type>
</CustomField>